# discrete-state-engine

./: .gitignore  LICENSE  README.md  README_V2.md  README_old.md  requirement.txt
docs/: architecture.md  fields.md  generator.md  operator.md  state_space.md  theory.md  topology.md
hpc_ecs_core/: pyproject.toml
hpc_ecs_core/src/hpc_ecs_core/: __init__.py  command_buffer.py  interfaces.py  manager.py  store.py
particle_grid_simulator/demos/: Discrete_state_physics_engine.ipynb
particle_grid_simulator/src/field/: __init__.py
particle_grid_simulator/src/state/: __init__.py
particle_grid_simulator/test/dynamic_system/: bouncing_balls_domain.py  complex_field_particle_domain_test.py  field_domain_test.py  hexagonical_grid_expansion.py  multi_particle_relativistic_quantum_system.py
particle_grid_simulator/test/field/: __init__.py  benchmark_test.py  compinent_manager_test.py  component_managr_raw_construtor_test.py
particle_grid_simulator/test/generator/: comonent_manager_test.py  complex_double_slit_field.py  component_benchmark.py  domain_test.py  domain_vs_cm_test.py  generator_benchmark.py  generic_component_complex_test.py  genric_component_test.py
particle_grid_simulator/test/operator/: 4d_momentum_walker.py  complex_field_multi_particle_systems.py  complex_field_particles_evolution_simulation.py  complex_system_test.py  component_manager_test.py  domain_test.py  independent_particle_simulation.py  n_particle_visualization.py  real_field_overlapping_particle_in_box.py
particle_grid_simulator/test/state/: bech_mark_test.py  test_function.py
(+106 files in other folders)
