[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc_ecs_core"
version = "0.1.0"
description = "High Performance Computing Entity Component System Core"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add any external pip packages your core needs here
    # e.g., "numpy>=1.21.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]